Fix missing collapse/expand (rancher/rancher#2064)

--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -774,13 +774,13 @@ ASIDE {
 **********/
 .collapser {
   &:after {
-    font-family: "SSGizmo";
-    content: '\F500';
+    font-family: "rancher-icons";
+    content: '\E613';
   }
 
   &.collapsed:after {
-    font-family: "SSGizmo";
-    content: '\F501';
+    font-family: "rancher-icons";
+    content: '\E61F';
   }
 }
 
